// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ShiftviewTooltip > renders correctly 1`] = `
<div
  class="d-flex flex-column py-2 evocon-v-tooltip"
>
  <span>
    <v-icon-stub
      class="mr-1"
      color="string"
      disabled="false"
      end="false"
      size="10"
      start="false"
      tag="i"
    >
      M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z
    </v-icon-stub>
    <span
      class="text-label-small font-weight-regular"
    >
      string
    </span>
  </span>
  <span>
    <!--v-if-->
    <span
      class="tooltip-title font-weight-medium mb-1"
    >
      string
    </span>
  </span>
  
  <span
    class="tooltip-value-row text-no-wrap overflow-hidden text-overflow-ellipsis d-flex align-center"
  >
    <v-icon-stub
      class="mr-1"
      color="primary"
      disabled="false"
      end="false"
      size="8"
      start="false"
      tag="i"
    >
      M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z
    </v-icon-stub>
    <span
      class="text-quaternary-dark-2 tooltip-value-row text-label-small font-weight-regular white-space-nowrap"
    >
      key2: 
    </span>
    <span
      class="tooltip-value-row text-body-small text-no-wrap overflow-hidden text-overflow-ellipsis"
    >
      <span
        class=""
      >
        string
      </span>
      <!--v-if-->
      <!--v-if-->
    </span>
  </span>
  <span
    class="tooltip-value-row text-no-wrap overflow-hidden text-overflow-ellipsis d-flex align-center"
  >
    <!--v-if-->
    <span
      class="text-quaternary-dark-2 tooltip-value-row text-label-small font-weight-regular white-space-nowrap"
    >
      key3: 
    </span>
    <span
      class="tooltip-value-row text-body-small text-no-wrap overflow-hidden text-overflow-ellipsis"
    >
      <span
        class=""
      >
        123
      </span>
      <!--v-if-->
      <!--v-if-->
    </span>
  </span>
  <span
    class="tooltip-value-row"
  >
    <!--v-if-->
    <span
      class="text-quaternary-dark-2 tooltip-value-row text-label-small font-weight-regular white-space-nowrap"
    >
      key1: 
    </span>
    <span
      class="tooltip-value-row text-body-small"
    >
      <span
        class=""
      >
        a longer string value for tooltip row, it might be a bit longer than the others and even wrap to the next line
      </span>
      <!--v-if-->
      <!--v-if-->
    </span>
  </span>
  
</div>
`;

exports[`ShiftviewTooltip > renders correctly with title icon 1`] = `
<div
  class="d-flex flex-column py-2 evocon-v-tooltip"
>
  <span>
    <v-icon-stub
      class="mr-1"
      color="string"
      disabled="false"
      end="false"
      size="10"
      start="false"
      tag="i"
    >
      M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z
    </v-icon-stub>
    <span
      class="text-label-small font-weight-regular"
    >
      string
    </span>
  </span>
  <span>
    <v-icon-stub
      class="mr-1"
      color="white"
      disabled="false"
      end="false"
      size="default"
      start="false"
      tag="i"
    >
      titleIcon
    </v-icon-stub>
    <span
      class="tooltip-title font-weight-medium mb-1"
    >
      string
    </span>
  </span>
  
  <span
    class="tooltip-value-row text-no-wrap overflow-hidden text-overflow-ellipsis d-flex align-center"
  >
    <v-icon-stub
      class="mr-1"
      color="primary"
      disabled="false"
      end="false"
      size="8"
      start="false"
      tag="i"
    >
      M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z
    </v-icon-stub>
    <span
      class="text-quaternary-dark-2 tooltip-value-row text-label-small font-weight-regular white-space-nowrap"
    >
      key2: 
    </span>
    <span
      class="tooltip-value-row text-body-small text-no-wrap overflow-hidden text-overflow-ellipsis"
    >
      <span
        class=""
      >
        string
      </span>
      <!--v-if-->
      <!--v-if-->
    </span>
  </span>
  <span
    class="tooltip-value-row text-no-wrap overflow-hidden text-overflow-ellipsis d-flex align-center"
  >
    <!--v-if-->
    <span
      class="text-quaternary-dark-2 tooltip-value-row text-label-small font-weight-regular white-space-nowrap"
    >
      key3: 
    </span>
    <span
      class="tooltip-value-row text-body-small text-no-wrap overflow-hidden text-overflow-ellipsis"
    >
      <span
        class=""
      >
        123
      </span>
      <!--v-if-->
      <!--v-if-->
    </span>
  </span>
  <span
    class="tooltip-value-row"
  >
    <!--v-if-->
    <span
      class="text-quaternary-dark-2 tooltip-value-row text-label-small font-weight-regular white-space-nowrap"
    >
      key1: 
    </span>
    <span
      class="tooltip-value-row text-body-small"
    >
      <span
        class=""
      >
        a longer string value for tooltip row, it might be a bit longer than the others and even wrap to the next line
      </span>
      <!--v-if-->
      <!--v-if-->
    </span>
  </span>
  
</div>
`;
